[tool.poetry]
name = "hashtable"
version = "0.1.0"
description = ""
authors = ["Ulrich Wilfried Motchoffo Kom <motchoffow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.1"
black = "^20.8b1"
flake8 = "^3.8.4"

[tool.poetry.dev-dependencies]
rope = "^0.18.0"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
