[tool.poetry]
name = "repeated_word"
version = "0.1.0"
description = ""
authors = ["Ulrich Wilfried Motchoffo Kom <motchoffow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^20.8b1"
flake8 = "^3.8.4"
pytest = "^6.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
